--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset = UTF-8>
         <meta name = viewport content = 'width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no'>
-        <meta name = description content = 'DESCRIPTION'>
+        <meta name = description content = 'An online underwater puzzle game about restoring balance to the power grid and bringing your city back to life'>
         <meta name = author content = 'Joachim Ford'>
 
         <meta property = og:title content = 'Joachim Ford'>
-        <meta property = og:description content = 'DESCRIPTION'>
-        <meta property = og:image content = IMAGE>
+        <meta property = og:description content = 'An online underwater puzzle game about restoring balance to the power grid and bringing your city back to life'>
+        <meta property = og:image content = src/super.png>
 
         <link rel="icon" type="image/png" href="fav/favicon-96x96.png" sizes="96x96" />
         <link rel="icon" type="image/svg+xml" href="fav/favicon.svg" />
